implementação do spring Security e Token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+api.security.token.secret=${JWT_SECRET:SE_NAO_ACHAR_NAS_VARIAVEIS_DE_AMBIENTE_USE_ESSA_SENHA}
